namespace java edu.jhu.hlt.miser.java
namespace py concrete.ex
#@namespace scala edu.jhu.hlt.miser

exception RebarException {
  1: string message
  2: optional binary serEx
}
